Fix stay tuned overflowing

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -11,6 +11,7 @@
 .stay-tuned {
 	position: fixed;
 	top: 66px;
+	max-width: 1280px;
 	width: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
